--- a/secam.html
+++ b/secam.html
@@ -602,9 +602,9 @@ header {
                 </div>
                 
                 <div class="form-group">
-                    <label for="reg-age">Âge :</label>
+                    <label for="reg-age">Email :</label>
                     <div class="input-wrapper">
-                        <input type="number" id="reg-age" name="age" required min="18" max="99" placeholder="Votre âge (min. 18 ans)">
+                        <input type="email" id="reg-age" name="email" required placeholder="Votre email">
                         <i class="fas fa-birthday-cake input-icon"></i>
                     </div>
                 </div>
@@ -626,7 +626,7 @@ header {
         <div class="modal-content">
             <h3>🛡️ Vérification d'Identité Requise</h3>
             <p>
-                Pour la sécurité des autres membres, nous avons besoin de vérifier votre identité. Prenez un selfie en direct et importez votre pièce d'identité (recto).
+                À fin de limiter les faux profils,nous avons besoin de vérifier l'identité de chaque utilisateur. Prenez un selfie en direct et importez votre pièce d'identité (recto).
             </p>
             
             <form id="verification-form">
